@@ -40,7 +40,7 @@ Dist::Zilla::Plugin::License = 0
 Dist::Zilla::Plugin::Readme = 0
 Dist::Zilla::Plugin::Manifest = 0
 Dist::Zilla::Plugin::Test::Compile = 2.002
-Dist::Zilla::Plugin::Test::CheckDeps = 0.006
+Dist::Zilla::Plugin::Test::CheckDeps = 0.007
 Dist::Zilla::Plugin::NoTabsTests = 0
 Dist::Zilla::Plugin::EOLTests = 0
 Dist::Zilla::Plugin::MetaTests = 0
